tests/test_files/errors/dot4.over
obj: {}
six: 6
dot: obj.six
